force-app/main/default/objects/User/fields/AccountRecordCrossover__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordCrossover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccountRecordCrossover</label>
    <type>Checkbox</type>
</CustomField>