force-app/main/default/objects/User/fields/AD_Username__c.field-meta.xml
<CustomField>
    <fullName>AD_Username__c</fullName>
    <description>The Active Directory username for this user. This is not from a feed, but is derived from the Salesforce Username in the userhelper.checkEbsUsername() method.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Active Directory username for this user. This is not from a feed, but is derived from the Salesforce Username in the userhelper.checkEbsUsername() method.</inlineHelpText>
    <label>AD Username</label>
    <length>10</length>
    <type>Text</type>
</CustomField>