force-app/main/default/objects/User/fields/affectlayer__AffectLayer_Caller_Id_Label__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__AffectLayer_Caller_Id_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AffectLayer Caller Id Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>