force-app/main/default/objects/User/fields/agentsync__NAME_FIRST__c.field-meta.xml
<CustomField>
    <fullName>agentsync__NAME_FIRST__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NIPR First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>