force-app/main/default/objects/User/fields/agentsync__NPN__c.field-meta.xml
<CustomField>
    <fullName>agentsync__NPN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>