force-app/main/default/objects/User/fields/Area_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Area_Nbr__c</fullName>
    <description>The number of the area - pulls from the organization_structure object.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The number of the area - pulls from the organization_structure object.</inlineHelpText>
    <label>Area Nbr</label>
    <length>6</length>
    <type>Text</type>
</CustomField>