force-app/main/default/objects/User/fields/ASO_Partner__c.field-meta.xml
<CustomField>
    <fullName>ASO_Partner__c</fullName>
    <description>Used to tie an MMS rep to ASO rep for partnership</description>
    <label>RSR Partner</label>
    <relationshipName>MMSASOPartner</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>