force-app/main/default/objects/User/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <description>FT 32110253 Manually populated by the Training team. Needed to tag users as part of a cohort for reporting purposes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cohort</label>
    <length>15</length>
    <type>Text</type>
</CustomField>