force-app/main/default/objects/User/fields/Community_Audience__c.field-meta.xml
<CustomField>
    <fullName>Community_Audience__c</fullName>
    <label>Community Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paychex</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>