force-app/main/default/objects/User/fields/Community_User_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Created_By__c</fullName>
    <description>Used for welcome email template</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Community User Created By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>