force-app/main/default/objects/User/fields/Community_User_First_Login__c.field-meta.xml
<CustomField>
    <fullName>Community_User_First_Login__c</fullName>
    <description>Created as a part of US38( When community user logins for the first time)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Community User First Login</label>
    <type>DateTime</type>
</CustomField>