force-app/main/default/objects/User/fields/ContactCrossover__c.field-meta.xml
<CustomField>
    <fullName>ContactCrossover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContactCrossover</label>
    <type>Checkbox</type>
</CustomField>