force-app/main/default/objects/User/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <defaultValue>&quot;0000&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Center</label>
    <length>4</length>
    <type>Text</type>
</CustomField>