force-app/main/default/objects/User/fields/Creation_Type__c.field-meta.xml
<CustomField>
    <fullName>Creation_Type__c</fullName>
    <description>The method of creation of this User record. This is populated from the New User application.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The method of creation of this User record.</inlineHelpText>
    <label>Creation Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>