force-app/main/default/objects/User/fields/CSUserId__c.field-meta.xml
<CustomField>
    <fullName>CSUserId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The ClientSpace User Id</inlineHelpText>
    <label>CS User Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>