force-app/main/default/objects/User/fields/Dedicated_NBSC__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_NBSC__c</fullName>
    <label>Dedicated NBSC</label>
    <relationshipName>DedicatedNBSC</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>