force-app/main/default/objects/User/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter district number as a 3 digit number with leading zero</inlineHelpText>
    <label>District</label>
    <length>10</length>
    <type>Text</type>
</CustomField>