force-app/main/default/objects/User/fields/DistrictsManaged__c.field-meta.xml
<CustomField>
    <fullName>DistrictsManaged__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A comma separated list of district numbers managed by this user that are not part of their hierarchy.</inlineHelpText>
    <label>Districts Managed</label>
    <length>80</length>
    <type>Text</type>
</CustomField>