force-app/main/default/objects/User/fields/DS_Packages__Out_of_Office_Start__c.field-meta.xml
<CustomField>
    <fullName>DS_Packages__Out_of_Office_Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Out of Office Start</label>
    <type>Date</type>
</CustomField>