force-app/main/default/objects/User/fields/DSA_FSS__c.field-meta.xml
<CustomField>
    <fullName>DSA_FSS__c</fullName>
    <inlineHelpText>The DSA or FSS of a Salesrep</inlineHelpText>
    <label>DSA/FSS</label>
    <relationshipName>dsa_fss</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>