force-app/main/default/objects/User/fields/EBS_Username__c.field-meta.xml
<CustomField>
    <fullName>EBS_Username__c</fullName>
    <description>The username to login to the EBS system.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The username to login to the EBS system.</inlineHelpText>
    <label>EBS Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>