force-app/main/default/objects/User/fields/EvaluatePermissionSets__c.field-meta.xml
<CustomField>
    <fullName>EvaluatePermissionSets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Evaluate the permission set groups for this user.</inlineHelpText>
    <label>Evaluate Permission Sets</label>
    <type>Checkbox</type>
</CustomField>