force-app/main/default/objects/User/fields/HasNSSRole__c.field-meta.xml
<CustomField>
    <fullName>HasNSSRole__c</fullName>
    <description>Formula that evaluates to True when the users current role contains NSS.</description>
    <formula>IF(Contains(UserRole.Name,&quot;NSS&quot;),True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasNSSRole</label>
    <type>Checkbox</type>
</CustomField>