force-app/main/default/objects/User/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <description>Date of Hire</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>