force-app/main/default/objects/User/fields/HR_Person_Id__c.field-meta.xml
<CustomField>
    <fullName>HR_Person_Id__c</fullName>
    <description>The Person Id from HR</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Person Id from HR</inlineHelpText>
    <label>HR Person Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>