force-app/main/default/objects/User/fields/HR_Services_Partner__c.field-meta.xml
<CustomField>
    <fullName>HR_Services_Partner__c</fullName>
    <description>The HR Services Partner is assigned to the Payx PEO-ASO Account Owner field</description>
    <label>HR Services Partner</label>
    <relationshipName>HrPayrollPartner</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>