force-app/main/default/objects/User/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is populated by a trigger on save of a record. Only Sales Jobs are populated with values like Sales Representative, District Assistant, District Manager...</inlineHelpText>
    <label>Job Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>