force-app/main/default/objects/User/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>The license group this user belongs to.</description>
    <inlineHelpText>The license group this user belongs to.</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Benetrac</fullName>
            </value>
            <value>
                <fullName>BusDev</fullName>
            </value>
            <value>
                <fullName>COE</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate Relations</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>EW</fullName>
            </value>
            <value>
                <fullName>Field Operations Core</fullName>
            </value>
            <value>
                <fullName>HNBF</fullName>
            </value>
            <value>
                <fullName>HR Online</fullName>
            </value>
            <value>
                <fullName>HRS</fullName>
            </value>
            <value>
                <fullName>HRS 401K-S125</fullName>
            </value>
            <value>
                <fullName>HRS Premier</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>MMS Hub</fullName>
            </value>
            <value>
                <fullName>MPSC</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>NSS</fullName>
            </value>
            <value>
                <fullName>PAS</fullName>
            </value>
            <value>
                <fullName>PAY</fullName>
            </value>
            <value>
                <fullName>Payroll Online</fullName>
            </value>
            <value>
                <fullName>PBS</fullName>
            </value>
            <value>
                <fullName>PEO Finance</fullName>
            </value>
            <value>
                <fullName>PEO HROi</fullName>
            </value>
            <value>
                <fullName>PEO New Business</fullName>
            </value>
            <value>
                <fullName>PEO Oasis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>