force-app/main/default/objects/User/fields/ManageZipOrgUnitsManaged__c.field-meta.xml
<CustomField>
    <fullName>ManageZipOrgUnitsManaged__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A comma separated list of the org unit query keys managed by this user. Multiple orgs in the same sales org should be at the same level (zone, district...).</inlineHelpText>
    <label>ManageZip Org Units Managed</label>
    <length>200</length>
    <type>Text</type>
</CustomField>