force-app/main/default/objects/User/fields/Next_Level_Award__c.field-meta.xml
<CustomField>
    <fullName>Next_Level_Award__c</fullName>
    <description>The award that the rep will receive when they reach the next Diamond Club level</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Level Award</label>
    <length>200</length>
    <type>Text</type>
</CustomField>