force-app/main/default/objects/User/fields/Non_Paychex_Employee__c.field-meta.xml
<CustomField>
    <fullName>Non_Paychex_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check this box if this user is not a Paychex Employee, this incudes temporary and contract employees</description>
    <inlineHelpText>Please check this box if this user is not a Paychex Employee, this incudes temporary and contract employees</inlineHelpText>
    <label>Non-Paychex Employee</label>
    <type>Checkbox</type>
</CustomField>