force-app/main/default/objects/User/fields/Non_Paychex_Employee_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Non_Paychex_Employee_User_Type__c</fullName>
    <description>Field to track non Paychex employee users</description>
    <inlineHelpText>Specify the type of Non-Paychex employee user</inlineHelpText>
    <label>Non Paychex Employee User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Temporary Employee</fullName>
            </value>
            <value>
                <fullName>Salesforce.com Personnel</fullName>
            </value>
            <value>
                <fullName>3rd Party Vendor</fullName>
            </value>
            <value>
                <fullName>Test-Default User</fullName>
            </value>
            <value>
                <fullName>Generic User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>