force-app/main/default/objects/User/fields/NSR_Tier__c.field-meta.xml
<CustomField>
    <fullName>NSR_Tier__c</fullName>
    <label>NSR/SDR Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect Tier 1</fullName>
            </value>
            <value>
                <fullName>Prospect Tier 2</fullName>
            </value>
            <value>
                <fullName>Prospect Tier 3</fullName>
            </value>
            <value>
                <fullName>Prospect Tier 4</fullName>
            </value>
            <value>
                <fullName>Current Client HNBF</fullName>
            </value>
            <value>
                <fullName>Current Client Other</fullName>
            </value>
            <value>
                <fullName>Oasis SDR</fullName>
            </value>
            <value>
                <fullName>MMS SDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>