force-app/main/default/objects/User/fields/NSS_Team__c.field-meta.xml
<CustomField>
    <fullName>NSS_Team__c</fullName>
    <inlineHelpText>If this is an NSR, which NSS team are they on?</inlineHelpText>
    <label>NSS Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAY</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>HRS</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>VS PAY</fullName>
            </value>
            <value>
                <fullName>HNB</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>Oasis SDR</fullName>
            </value>
            <value>
                <fullName>Inbound-Oasis</fullName>
            </value>
            <value>
                <fullName>Outbound-Oasis</fullName>
            </value>
            <value>
                <fullName>MMS SDR</fullName>
            </value>
            <value>
                <fullName>Virtual SMB</fullName>
            </value>
            <value>
                <fullName>SMB New Business</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>