force-app/main/default/objects/User/fields/NSS_Territory_Nbr__c.field-meta.xml
<CustomField>
    <fullName>NSS_Territory_Nbr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The territory number used by NSS</inlineHelpText>
    <label>NSS Territory Nbr</label>
    <length>5</length>
    <type>Text</type>
</CustomField>