force-app/main/default/objects/User/fields/Number_of_logins__c.field-meta.xml
<CustomField>
    <fullName>Number_of_logins__c</fullName>
    <label>Number of logins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>