force-app/main/default/objects/User/fields/Oracle_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Oracle_CPQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oracle CPQ</label>
    <type>Checkbox</type>
</CustomField>