force-app/main/default/objects/User/fields/Payroll_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Employee_Number__c</fullName>
    <description>To capture their employee number for Corp Sales reporting needs. Currently only populated when manually updated from their Contact Record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Employee Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>