force-app/main/default/objects/User/fields/Person_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Person_ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Rep ID Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>