force-app/main/default/objects/User/fields/PilotUser__c.field-meta.xml
<CustomField>
    <fullName>PilotUser__c</fullName>
    <description>Only use this field if the value will be tied to a pricebook i.e. Steelbrick</description>
    <inlineHelpText>Only use this field if the value will be tied to a pricebook i.e. Steelbrick</inlineHelpText>
    <label>Pilot User</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Steelbrick</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>