force-app/main/default/objects/User/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the profile - so we don&apos;t have to use an object relationship in formulas</inlineHelpText>
    <label>Profile Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>