force-app/main/default/objects/User/fields/Regions_Covered__c.field-meta.xml
<CustomField>
    <fullName>Regions_Covered__c</fullName>
    <description>Map to email templates so that the regions covered displays/populates on the email templates, which satisfies a federal regulatory requirement.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Regions Covered</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>