force-app/main/default/objects/User/fields/Requested_Invite_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Invite_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Invite Date</label>
    <type>DateTime</type>
</CustomField>