force-app/main/default/objects/User/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <label>Sales Org-Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>BenAdmin</fullName>
            </value>
            <value>
                <fullName>Benetrac</fullName>
            </value>
            <value>
                <fullName>BusDev</fullName>
            </value>
            <value>
                <fullName>COE</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate Relations</fullName>
            </value>
            <value>
                <fullName>Dedicated Service Center</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>Enterprise Service Center</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>EW</fullName>
            </value>
            <value>
                <fullName>Field Operations Core</fullName>
            </value>
            <value>
                <fullName>HNBF</fullName>
            </value>
            <value>
                <fullName>HROI</fullName>
            </value>
            <value>
                <fullName>HR Online</fullName>
            </value>
            <value>
                <fullName>HRS</fullName>
            </value>
            <value>
                <fullName>HRS 401K-S125</fullName>
            </value>
            <value>
                <fullName>HRS Premier</fullName>
            </value>
            <value>
                <fullName>Icon</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Merchant Services</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>MMS Hub</fullName>
            </value>
            <value>
                <fullName>MPSC</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>