force-app/main/default/objects/User/fields/Securities_License__c.field-meta.xml
<CustomField>
    <fullName>Securities_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Securities License checkbox should be checked for the list of users (AllLicensedTitles)</description>
    <inlineHelpText>“DO NOT UPDATE! Please reach out to FINRACompliance@paychex.com for modifications or questions”.</inlineHelpText>
    <label>Securities License</label>
    <type>Checkbox</type>
</CustomField>