force-app/main/default/objects/User/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>For HNBF Sales Reps per case 13731807.
Read only for HNBF Rep profile.
Read/Write for HNBF Admin profiles.</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15-50</fullName>
            </value>
            <value>
                <fullName>51+</fullName>
            </value>
            <value>
                <fullName>DSA</fullName>
            </value>
            <value>
                <fullName>DSM</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>SDA</fullName>
            </value>
            <value>
                <fullName>ZM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>