force-app/main/default/objects/User/fields/Term_NSR__c.field-meta.xml
<CustomField>
    <fullName>Term_NSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term NSR</label>
    <type>Checkbox</type>
</CustomField>