force-app/main/default/objects/User/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>Ths date tracks the terminated reps</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>