force-app/main/default/objects/User/fields/TimeTrade_SF1__Invitation_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Invitation_Template_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the name of an Engageware Invitation Template to allow create invitation to default to the specified template when this user creates Engageware Invitations.  When no value is specified, the older available template record is used.</inlineHelpText>
    <label>Engageware Invitation Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>